# especializacao-engenharia-de-ia

./: .env.example  .gitignore  README.en.md  README.md
curso-ia/: README.md  main.py  pyproject.toml
curso-ia/Rag/: rag-qdrant.py  rag.py
curso-ia/docling/: 1-extraction.py  2-extraction-images.py  3-chunking.py  4-hybrid-chunker.py  5-metadados.py  6-embeddings.py
curso-ia/projeto/: ingestion.py
curso-ia/projeto/app/: endpoint.py  main.py  router.py
