[project]
name = "curso-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.72.0",
    "fastapi>=0.124.2",
    "groq>=1.0.0",
    "langextract>=1.1.1",
    "numpy>=2.4.2",
    "openai>=2.9.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "qdrant-client[fastembed]>=1.16.2",
    "sentence-transformers>=5.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
